--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -114,3 +114,11 @@ repos:
       - id: requirements-txt-fixer
       - id: sort-simple-yaml
       - id: trailing-whitespace
+
+  - repo: https://github.com/Cosmian/git-hooks.git
+    rev: v1.0.18
+    hooks:
+      - id: docker-compose-up
+      - id: npm-run-format
+      - id: npm-install
+      - id: npm-test
