--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: "3"
 services:
   kms:
     container_name: kms
-    image: ghcr.io/cosmian/kms:4.8.0
+    image: ghcr.io/cosmian/kms:feat-edit_policy
     ports:
       - 9998:9998
     environment:
