--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       findex-cloud-version: 0.3.1
 
   lint:
@@ -34,7 +34,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       kms-jwe-key:
         '{"kty": "OKP","d": "MPEVJwdRqGM_qhJOUb5hR0Xr9EvwMLZGnkf-eDj5fU8","use": "enc","crv": "X25519","kid": "DX3GC+Fx3etxfRJValQNbqaB0gs=","x":
         "gdF-1TtAjsFqNWr9nwhGUlFG38qrDUqYgcILgtYrpTY","alg": "ECDH-ES"}'
@@ -43,6 +43,13 @@ jobs:
         ./node_modules/non_regression_vector.json
         ./node_modules/sqlite.db
     secrets: inherit
+
+  cloudproof_kms_js:
+    needs: test
+    uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_kms_js.yml@develop
+    with:
+      branch: v2.0.0
+      kms-version: 4.9.1
 
   cloudproof_java:
     needs: test
@@ -53,7 +60,7 @@ jobs:
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       findex-cloud-version: 0.3.1
       copy_fresh_build: false
       copy_regression_files: |
@@ -67,7 +74,7 @@ jobs:
     with:
       branch: develop
       target: x86_64-unknown-linux-gnu
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
@@ -99,7 +106,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       findex-cloud-version: 0.3.1
 
   example_reactjs:
@@ -115,7 +122,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       findex-cloud-version: 0.3.1
 
   example_browser:
@@ -129,7 +136,7 @@ jobs:
         python3 -m http.server &
         sleep 3
         node test.mjs
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       findex-cloud-version: 0.3.1
 
   example_webpack:
@@ -151,7 +158,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: 4.9.0
+      kms-version: 4.9.1
       findex-cloud-version: 0.3.1
     secrets: inherit
 
@@ -180,6 +187,7 @@ jobs:
   publish-dry-run:
     needs:
       - lint
+      - cloudproof_kms_js
       - cloudproof_java
       - cloudproof_flutter
       - cloudproof_python
