feat: support kms 4.11 + kms_js 3.1.2

--- a/examples/vuejs/tsconfig.json
+++ b/examples/vuejs/tsconfig.json
@@ -6,10 +6,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "lib": [
-      "dom",
-      "es2019"
-    ],
+    "lib": ["dom", "es2019"],
+    "jsx": "react-jsx"
   },
   "references": [
     {
