--- a/examples/vuejs/package.json
+++ b/examples/vuejs/package.json
@@ -10,12 +10,14 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@types/react": "^18.2.48",
     "cloudproof_js": "file:../..",
     "vite-plugin-wasm": "^3.0.0",
     "vue": "^3.2.38"
   },
   "devDependencies": {
     "@types/node": "^16.11.56",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/tsconfig": "^0.1.3",
     "http-server": "^14.1.1",
