--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: feature-covercrypt_rekey
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       kms-jwe-key:
         '{"kty": "OKP","d": "MPEVJwdRqGM_qhJOUb5hR0Xr9EvwMLZGnkf-eDj5fU8","use": "enc","crv": "X25519","kid": "DX3GC+Fx3etxfRJValQNbqaB0gs=","x":
         "gdF-1TtAjsFqNWr9nwhGUlFG38qrDUqYgcILgtYrpTY","alg": "ECDH-ES"}'
@@ -49,7 +49,7 @@ jobs:
     uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_kms_js.yml@develop
     with:
       branch: feature/covercrypt_rekey
-      kms-version: feature-covercrypt_rekey
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
 
   cloudproof_java:
     needs: test
@@ -60,7 +60,7 @@ jobs:
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: feature-covercrypt_rekey
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       findex-cloud-version: 0.3.1
       copy_fresh_build: false
       copy_regression_files: |
@@ -74,7 +74,7 @@ jobs:
     with:
       branch: feature/covercrypt-rekey
       target: x86_64-unknown-linux-gnu
-      kms-version: feature-covercrypt_rekey
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       findex-cloud-version: 0.3.1
       copy_fresh_build: false
       copy_regression_files: |
@@ -107,7 +107,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.11.3
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       findex-cloud-version: 0.3.1
 
   example_reactjs:
@@ -123,7 +123,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.11.3
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       findex-cloud-version: 0.3.1
 
   example_browser:
@@ -137,7 +137,7 @@ jobs:
         python3 -m http.server &
         sleep 3
         node test.mjs
-      kms-version: 4.11.3
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       findex-cloud-version: 0.3.1
 
   example_webpack:
@@ -159,7 +159,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: 4.11.3
+      kms-version: ghcr.io/cosmian/kms:feature-covercrypt_rekey
       findex-cloud-version: 0.3.1
     secrets: inherit
 
