--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json src/test/resources/cover_crypt/non_regression/js_non_regression_vector.json
         cp ./cloudproof_js/sqlite.db                  src/test/resources/findex/non_regression/js_sqlite.db
+      fips: false
 
   cloudproof_python:
     needs:
