--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
         cp ./cloudproof_js/sqlite.db                  tests/data/findex/non_regression/js_sqlite.db
+      fips: false
 
   cloudproof_flutter:
     needs:
@@ -96,6 +97,7 @@ jobs:
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json test/resources/cover_crypt/non_regression/js_non_regression_vector.json
         cp ./cloudproof_js/sqlite.db                  test/resources/findex/non_regression/js_sqlite.db
+      fips: false
 
   example_vuejs:
     name: vuejs tests
