--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
-      kms-version: 4.13.0
+      kms-version: 4.19.3
       findex-cloud-version: 0.3.1
 
   lint:
@@ -34,10 +34,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: 4.13.0
-      kms-jwe-key:
-        '{"kty": "OKP","d": "MPEVJwdRqGM_qhJOUb5hR0Xr9EvwMLZGnkf-eDj5fU8","use": "enc","crv": "X25519","kid": "DX3GC+Fx3etxfRJValQNbqaB0gs=","x":
-        "gdF-1TtAjsFqNWr9nwhGUlFG38qrDUqYgcILgtYrpTY","alg": "ECDH-ES"}'
+      kms-version: 4.19.3
       findex-cloud-version: 0.3.1
       regression_files: |
         ./node_modules/non_regression_vector.json
@@ -49,7 +46,8 @@ jobs:
     uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_kms_js.yml@develop
     with:
       branch: develop
-      kms-version: ghcr.io/cosmian/kms:4.13.0
+      kms-version: ghcr.io/cosmian/kms:4.19.3
+      fips: false
 
   cloudproof_java:
     needs: test
@@ -60,12 +58,13 @@ jobs:
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: ghcr.io/cosmian/kms:4.13.0
+      kms-version: ghcr.io/cosmian/kms:4.19.3
       findex-cloud-version: 0.3.1
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json src/test/resources/cover_crypt/non_regression/js_non_regression_vector.json
         cp ./cloudproof_js/sqlite.db                  src/test/resources/findex/non_regression/js_sqlite.db
+      fips: false
 
   cloudproof_python:
     needs:
@@ -74,12 +73,13 @@ jobs:
     with:
       branch: develop
       target: x86_64-unknown-linux-gnu
-      kms-version: ghcr.io/cosmian/kms:4.13.0
+      kms-version: ghcr.io/cosmian/kms:4.19.3
       findex-cloud-version: 0.3.1
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
         cp ./cloudproof_js/sqlite.db                  tests/data/findex/non_regression/js_sqlite.db
+      fips: false
 
   cloudproof_flutter:
     needs:
@@ -107,7 +107,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.13.0
+      kms-version: 4.19.3
       findex-cloud-version: 0.3.1
 
   example_reactjs:
@@ -123,7 +123,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.13.0
+      kms-version: 4.19.3
       findex-cloud-version: 0.3.1
 
   example_browser:
@@ -137,7 +137,7 @@ jobs:
         python3 -m http.server &
         sleep 3
         node test.mjs
-      kms-version: 4.13.0
+      kms-version: 4.19.3
       findex-cloud-version: 0.3.1
 
   example_webpack:
@@ -159,7 +159,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: 4.13.0
+      kms-version: 4.19.3
       findex-cloud-version: 0.3.1
     secrets: inherit
 
